# flarium

./: .gitattributes  Affine.cpp  Affine.h  BGColor.cpp  BGColor.h  CMakeLists.txt  CMakePresets.json  Clouds.cpp  Clouds.h  Cmplx.cpp  Cmplx.h  Cmplx_.cpp  Cmplx_.h  Delta_z.cpp  Dib.cpp  Dib.h  Dibapi.cpp  Dibapi.h  Equation.cpp  Expression.h  External.h  FAQ_email.txt  FDimension.cpp  Filter_Complete.cpp  Filters.cpp  Filters_.cpp  Flarium24.bak  Flarium24.clw  Flarium24.cpp  Flarium24.dsp  Flarium24.dsw  Flarium24.h  Flarium24.mdp  Flarium24.opt  Flarium24.plg  Flarium24.rc  Flarium24.rc2  Flarium24Doc.cpp  Flarium24Doc.h  Flarium24View.cpp  (+49 more)
.github/workflows/: cmake.yml
hlp/: AfxCore.rtf  FLARIUM24.HLP  Flarium24.FTS  Flarium24.GID  Flarium24.cnt  Flarium24.hm  Flarium24.hpj
legacy/: Flarium24.mak
